--- a/src/_layout.ejs
+++ b/src/_layout.ejs
@@ -1,34 +1,44 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="overseas">
-    <meta name="author" content="overseas">
-    <!--<link rel="icon" href="favicon.ico">-->
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="overseas">
+	<meta name="author" content="overseas">
+	<!--<link rel="icon" href="favicon.ico">-->
 
-    <title>簡章系統</title>
+	<title>簡章系統</title>
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+	<!-- Bootstrap core CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
-    <!-- Custom styles for this template -->
-    <link href="css/<%= current.source %>.css" rel="stylesheet">
-  </head>
-  <body>
-    <% if(current.source != 'login') { %>
-        <%- partial("partials/_header") %>
-    <% } %>
+	<!-- Custom styles for this template -->
+	<link href="css/<%= current.source %>.css" rel="stylesheet">
+</head>
+<body>
+	<% if(current.source != 'login') { %>
+	<%- partial("partials/_header") %>
+	<% } %>
 
-    <%- yield %>
+	<%- yield %>
 
-    <% if(current.source != 'login') { %>
-        <%- partial("partials/_footer") %>
-    <% } %>
+	<% if(current.source != 'login') { %>
+	<%- partial("partials/_footer") %>
+	<% } %>
 
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    <script src="js/<%= current.source %>.js"></script>
-  </body>
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+	<script src="lib/i18next-1.11.2.min.js"></script>
+	<script src="js/<%= current.source %>.js"></script>
+	<script>
+		const lng = localStorage.language || 'ch';
+		$.i18n.init({
+			lng, 
+			debug: true
+		}, function() {
+			$(document).i18n();
+		});
+	</script>
+</body>
 </html>
