--- a/src/login.ejs
+++ b/src/login.ejs
@@ -4,20 +4,20 @@
 			<div id="login" class="card">
 				<div class="card-block">
 					<div class="form-group row">
-						<label for="account" class="col-2 col-form-label">帳號	</label>
+						<label for="account" class="col-2 col-form-label" data-i18n="login.account"><!-- 帳號 --></label>
 						<div class="col-10">
 							<input class="form-control" type="text" id="account">
 						</div>
 					</div>
 					<div class="form-group row">
-						<label for="password" class="col-2 col-form-label">密碼</label>
+						<label for="password" class="col-2 col-form-label" data-i18n="login.password"><!-- 密碼 --></label>
 						<div class="col-10">
 							<input class="form-control" type="password" id="password">
 						</div>
 					</div>
 					<div class="form-group row">
 						<div class="col-10 offset-2">
-							<button id="btn-login" type="button" class="btn btn-primary">登入</button>
+							<button id="btn-login" type="button" class="btn btn-primary" data-i18n="login.loginBtn"><!-- 登入 --></button>
 						</div>
 					</div>
 				</div>
