--- a/src/login.ejs
+++ b/src/login.ejs
@@ -17,9 +17,20 @@
 					</div>
 					<div class="form-group row">
 						<div class="col-10 offset-2">
-							<button id="btn-login" type="button" class="btn btn-primary" data-i18n="login.loginBtn"><!-- 登入 --></button>
+							<div class="input-group">
+								<button id="btn-login" type="button" class="btn btn-primary" data-i18n="login.loginBtn"><!-- 登入 --></button>
+								<div class="input-group-btn">
+									<button id="btn-language" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+										<i class="fa fa-cog" aria-hidden="true"></i>
+									</button>
+									<div class="dropdown-menu dropdown-menu-right">
+										<a class="dropdown-item btn-ch" href="#">中文</a>
+										<a class="dropdown-item btn-en" href="#">English</a>
+									</div>
+								</div>
+							</div>
 						</div>
-					</div>
+    				</div>
 				</div>
 			</div>
 		</div>
