--- a/src/_layout.ejs
+++ b/src/_layout.ejs
@@ -32,6 +32,9 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	<script src="lib/i18next-1.11.2.min.js"></script>
 	<script src="js/app.js"></script>
+	<% if(current.source != 'login') { %>
+		<script src="js/header.js"></script>
+	<% } %>	
 	<script src="js/<%= current.source %>.js"></script>
 </body>
 </html>
