--- a/src/partials/_header.ejs
+++ b/src/partials/_header.ejs
@@ -1,2 +1,31 @@
-<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+<nav id="nav" class="navbar navbar-toggleable-md navbar-light bg-faded px-5">
+	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<a class="navbar-brand" href="/" data-i18n="global.siteName"><!-- 海聯 no 簡章系統 --></a>
+
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
+			<!-- <li class="nav-item active">
+				<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+			</li> -->
+		</ul>
+		<ul class="navbar-nav mr-5">
+			<li class="nav-item">
+				<a id="userName" class="nav-link" href="#"><!-- User name --></span></a>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<i class="fa fa-cog" aria-hidden="true"></i>
+				</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+					<a class="dropdown-item btn-ch" href="#">中文</a>
+					<a class="dropdown-item btn-en" href="#">English</a>
+				</div>
+			</li>
+			<li id="btn-logout" class="nav-item">
+				<a class="nav-link" href="#" data-i18n="global.logoutBtn"><!-- 登出 --></span></a>
+			</li>
+		</ul>
+	</div>
 </nav>
