--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,1 +1,34 @@
-<div>Index</div>
+<div class="container">
+	<div class="row mt-5 pt-5">
+		<div class="col-md-4">
+			<div class="card link-item">
+				<div class="card-block" data-i18n="index.schoolAccountSetting"></div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="card link-item">
+				<div class="card-block" data-i18n="index.formSurvey"></div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="card link-item">
+				<div class="card-block" data-i18n="index.personalInfo"></div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="card link-item">
+				<div class="card-block" data-i18n="index.download"></div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="card link-item">
+				<div class="card-block" data-i18n="index.history"></div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="card link-item">
+				<div class="card-block" data-i18n="index.singUp"></div>
+			</div>
+		</div>
+	</div>
+</div>
