不給你切換語系勒

--- a/src/login.ejs
+++ b/src/login.ejs
@@ -19,6 +19,8 @@
 						<div class="col-10 offset-2">
 							<div class="input-group">
 								<button id="btn-login" type="button" class="btn btn-primary" data-i18n="login.loginBtn"><!-- 登入 --></button>
+								<!-- for i18n -->
+								<!--
 								<div class="input-group-btn">
 									<button id="btn-language" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 										<i class="fa fa-cog" aria-hidden="true"></i>
@@ -28,6 +30,7 @@
 										<a class="dropdown-item btn-en" href="#">English</a>
 									</div>
 								</div>
+								-->
 							</div>
 						</div>
     				</div>
