--- a/src/partials/_header.ejs
+++ b/src/partials/_header.ejs
@@ -14,6 +14,8 @@
 			<li class="nav-item">
 				<a id="userName" class="nav-link" href="#"><!-- User name --></span></a>
 			</li>
+			<!-- for i18n -->
+			<!-- 
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<i class="fa fa-cog" aria-hidden="true"></i>
@@ -22,7 +24,8 @@
 					<a class="dropdown-item btn-ch" href="#">中文</a>
 					<a class="dropdown-item btn-en" href="#">English</a>
 				</div>
-			</li>
+			</li> 
+			-->
 			<li id="btn-logout" class="nav-item">
 				<a class="nav-link" href="#" data-i18n="global.logoutBtn"><!-- 登出 --></span></a>
 			</li>
