--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,11 +1,20 @@
 .link-item {
+	text-decoration: none !important;
+	color: inherit;
+}
+
+.link-item:focus {
+	color: inherit;
+}
+
+.link-item .card {
 	margin-top: 15px;
 	margin-bottom: 15px;
 	padding: 14px;
 	cursor: pointer;
 	font-size: 20px;
 	font-weight: bold;
-	transition: all .5s;
+	transition: all .2s;
 	text-align: center;
 }
 
