--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,34 +1,46 @@
 <div class="container">
 	<div class="row mt-5 pt-5">
 		<div class="col-md-4">
-			<div class="card link-item">
-				<div class="card-block" data-i18n="index.schoolAccountSetting"></div>
-			</div>
+			<a class="link-item" href="/account">
+				<div class="card">
+					<div class="card-block" data-i18n="index.schoolAccountSetting"></div>
+				</div>
+			</a>
 		</div>
 		<div class="col-md-4">
-			<div class="card link-item">
-				<div class="card-block" data-i18n="index.formSurvey"></div>
-			</div>
+			<a class="link-item" href="#">
+				<div class="card">
+					<div class="card-block" data-i18n="index.formSurvey"></div>
+				</div>
+			</a>
 		</div>
 		<div class="col-md-4">
-			<div class="card link-item">
-				<div class="card-block" data-i18n="index.personalInfo"></div>
-			</div>
+			<a class="link-item" href="#">
+				<div class="card">
+					<div class="card-block" data-i18n="index.personalInfo"></div>
+				</div>
+			</a>
 		</div>
 		<div class="col-md-4">
-			<div class="card link-item">
-				<div class="card-block" data-i18n="index.download"></div>
-			</div>
+			<a class="link-item" href="#">
+				<div class="card">
+					<div class="card-block" data-i18n="index.download"></div>
+				</div>
+			</a>
 		</div>
 		<div class="col-md-4">
-			<div class="card link-item">
-				<div class="card-block" data-i18n="index.history"></div>
-			</div>
+			<a class="link-item" href="#">
+				<div class="card">
+					<div class="card-block" data-i18n="index.history"></div>
+				</div>
+			</a>
 		</div>
 		<div class="col-md-4">
-			<div class="card link-item">
-				<div class="card-block" data-i18n="index.singUp"></div>
-			</div>
+			<a class="link-item" href="#">
+				<div class="card">
+					<div class="card-block" data-i18n="index.singUp"></div>
+				</div>
+			</a>
 		</div>
 	</div>
 </div>
