--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row mt-5 pt-5">
 		<div class="col-md-4">
-			<a class="link-item" href="/account">
+			<a id="btn-schoolAccountSetting" class="link-item" href="#">
 				<div class="card">
 					<div class="card-block" data-i18n="index.schoolAccountSetting"></div>
 				</div>
