--- a/src/schoolUser.ejs
+++ b/src/schoolUser.ejs
@@ -1,8 +1,8 @@
 <div id="page-schoolUser" class="container">
 	<div class="row">
 		<div id="title" class="col-lg-12">
-			<span id="schoolName">國立暨南國際大學</span>
-			<span>承辦人員清單</span>
+			<span id="schoolName">國立暨南國際大學~~~</span>
+			<span data-i18n="schoolUser.schoolUserList"><!-- 承辦人員清單 --></span>
 			<button class="btn btn-primary btn-sm btn-openAddSchoolUserModal">
 				<i class="fa fa-plus" aria-hidden="true"></i>
 			</button>  
@@ -41,62 +41,62 @@
 	</div>
 </div>
 
-<div class="modal fade" id="modal-addSchoolUser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="modal-addSchoolUser" tabindex="-1" role="dialog" aria-labelledby="addSchoolUserModalLabel" aria-hidden="true">
 	<div class="modal-dialog modal-lg" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">新增承辦人員</h5>
+				<h5 class="modal-title" id="addSchoolUserModalLabel" data-i18n="schoolUser.addSchoolUserModal.addUser"><!-- 新增承辦人員 --></h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
 			<div class="modal-body">
 				<div class="form-group row">
-					<label class="col-2 col-form-label">學校</label>
+					<label class="col-2 col-form-label" data-i18n="schoolUser.addSchoolUserModal.school"><!-- 學校 --></label>
 					<div class="col-10">
-						<input class="form-control" type="text" value="國立暨南國際大學" disabled />
+						<input class="form-control" type="text" disabled />
 					</div>
 				</div>
 				<div class="form-group row">
-					<label for="" class="col-2 col-form-label">中文姓名</label>
-					<div class="col-10">
-						<input class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label for="" class="col-2 col-form-label">英文姓名</label>
+					<label for="" class="col-2 col-form-label" data-i18n="schoolUser.addSchoolUserModal.cname"><!-- 中文姓名 --></label>
 					<div class="col-10">
 						<input class="form-control" type="text" />
 					</div>
 				</div>
 				<div class="form-group row">
-					<label for="" class="col-2 col-form-label">信箱</label>
+					<label for="" class="col-2 col-form-label" data-i18n="schoolUser.addSchoolUserModal.ename"><!-- 英文姓名 --></label>
 					<div class="col-10">
 						<input class="form-control" type="text" />
 					</div>
 				</div>
 				<div class="form-group row">
-					<label for="" class="col-2 col-form-label">密碼</label>
+					<label for="" class="col-2 col-form-label" data-i18n="schoolUser.addSchoolUserModal.email"><!-- 信箱 --></label>
+					<div class="col-10">
+						<input class="form-control" type="text" />
+					</div>
+				</div>
+				<div class="form-group row">
+					<label for="" class="col-2 col-form-label" data-i18n="schoolUser.addSchoolUserModal.pass"><!-- 密碼 --></label>
 					<div class="col-10">
 						<input class="form-control" type="password" />
 					</div>
 				</div>
 				<div class="form-group row">
-					<label for="" class="col-2 col-form-label">處室</label>
+					<label for="" class="col-2 col-form-label" data-i18n="schoolUser.addSchoolUserModal.org"><!-- 處室 --></label>
 					<div class="col-10">
 						<input class="form-control" type="text" />
 					</div>
 				</div>
 				<div class="form-group row">
-					<label for="" class="col-2 col-form-label">電話</label>
+					<label for="" class="col-2 col-form-label" data-i18n="schoolUser.addSchoolUserModal.tel"><!-- 電話 --></label>
 					<div class="col-10">
 						<input class="form-control" type="text" />
 					</div>
 				</div>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-				<button type="button" class="btn btn-primary">新增</button>
+				<button type="button" class="btn btn-secondary" data-dismiss="modal" data-i18n="schoolUser.addSchoolUserModal.cancel"><!-- 取消 --></button>
+				<button type="button" class="btn btn-primary" data-i18n="schoolUser.addSchoolUserModal.confirm"><!-- 新增 --></button>
 			</div>
 		</div>
 	</div>
