不小心把 class 拔掉惹

--- a/src/schoolUser.ejs
+++ b/src/schoolUser.ejs
@@ -3,7 +3,7 @@
 		<div id="title" class="col-lg-12">
 			<span id="schoolName">國立暨南國際大學~~~</span>
 			<span data-i18n="schoolUser.schoolUserList"><!-- 承辦人員清單 --></span>
-			<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modal-addSchoolUser">
+			<button class="btn btn-primary btn-sm btn-openAddSchoolUserModal" data-toggle="modal" data-target="#modal-addSchoolUser">
 				<i class="fa fa-plus" aria-hidden="true"></i>
 			</button>  
 		</div>
