--- a/src/schoolUser.ejs
+++ b/src/schoolUser.ejs
@@ -13,10 +13,10 @@
 			<table id="schoolUserListTable" class="table table-bordered table-hover">
 				<thead>
 					<tr>
-						<th>姓名</th>
-						<th>信箱</th>
-						<th>處室</th>
-						<th>電話</th>
+						<th data-i18n="schoolUser.list.name"><!-- 姓名 --></th>
+						<th data-i18n="schoolUser.list.email"><!-- 信箱 --></th>
+						<th data-i18n="schoolUser.list.org"><!-- 處室 --></th>
+						<th data-i18n="schoolUser.list.tel"><!-- 電話 --></th>
 						<th style="width: 124px"></th>
 					</tr>
 				</thead>
