--- a/src/schoolUser.ejs
+++ b/src/schoolUser.ejs
@@ -1,7 +1,7 @@
 <div id="page-schoolUser" class="container">
 	<div class="row">
 		<div id="title" class="col-lg-12">
-			<span id="schoolName">國立暨南國際大學~~~</span>
+			<span id="schoolName"><!-- 國立暨南國際大學~~~ --></span>
 			<span data-i18n="schoolUser.schoolUserList"><!-- 承辦人員清單 --></span>
 			<button class="btn btn-primary btn-sm btn-openAddSchoolUserModal" data-toggle="modal" data-target="#modal-addSchoolUser">
 				<i class="fa fa-plus" aria-hidden="true"></i>
