--- a/src/user.ejs
+++ b/src/user.ejs
@@ -5,45 +5,45 @@
 				<div class="card-header" data-i18n="user.title"><!-- 編輯個人資料 --></div>
 				<div class="card-block">
 					<div class="form-group row">
-						<label class="col-2 col-form-label" data-i18n="user.form.school"><!-- 學校 --></label>
+						<label for="school" class="col-2 col-form-label" data-i18n="user.form.school"><!-- 學校 --></label>
 						<div class="col-10">
-							<input class="form-control" type="text" disabled />
+							<input id="school" class="form-control" type="text" disabled />
 						</div>
 					</div>
 					<div class="form-group row">
-						<label for="" class="col-2 col-form-label" data-i18n="user.form.cname"><!-- 中文姓名 --></label>
+						<label for="cname" class="col-2 col-form-label" data-i18n="user.form.cname"><!-- 中文姓名 --></label>
 						<div class="col-10">
-							<input class="form-control" type="text" />
+							<input id="cname" class="form-control" type="text" />
 						</div>
 					</div>
 					<div class="form-group row">
-						<label for="" class="col-2 col-form-label" data-i18n="user.form.ename"><!-- 英文姓名 --></label>
+						<label for="ename" class="col-2 col-form-label" data-i18n="user.form.ename"><!-- 英文姓名 --></label>
 						<div class="col-10">
-							<input class="form-control" type="text" />
+							<input id="ename" class="form-control" type="text" />
 						</div>
 					</div>
 					<div class="form-group row">
-						<label for="" class="col-2 col-form-label" data-i18n="user.form.email"><!-- 信箱 --></label>
+						<label for="email" class="col-2 col-form-label" data-i18n="user.form.email"><!-- 信箱 --></label>
 						<div class="col-10">
-							<input class="form-control" type="text" />
+							<input id="email" class="form-control" type="text" />
 						</div>
 					</div>
 					<div class="form-group row">
-						<label for="" class="col-2 col-form-label" data-i18n="user.form.pass"><!-- 密碼 --></label>
+						<label for="pass" class="col-2 col-form-label" data-i18n="user.form.pass"><!-- 密碼 --></label>
 						<div class="col-10">
-							<input class="form-control" type="password" />
+							<input id="pass" class="form-control" type="password" />
 						</div>
 					</div>
 					<div class="form-group row">
-						<label for="" class="col-2 col-form-label" data-i18n="user.form.org"><!-- 處室 --></label>
+						<label for="org" class="col-2 col-form-label" data-i18n="user.form.org"><!-- 處室 --></label>
 						<div class="col-10">
-							<input class="form-control" type="text" />
+							<input id="org" class="form-control" type="text" />
 						</div>
 					</div>
 					<div class="form-group row">
-						<label for="" class="col-2 col-form-label" data-i18n="user.form.tel"><!-- 電話 --></label>
+						<label for="tel" class="col-2 col-form-label" data-i18n="user.form.tel"><!-- 電話 --></label>
 						<div class="col-10">
-							<input class="form-control" type="text" />
+							<input id="tel" class="form-control" type="text" />
 						</div>
 					</div>
 					<div class="form-group row">
