--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,42 +3,42 @@
 		<div class="col-md-4">
 			<a id="btn-schoolAccountSetting" class="link-item" href="#">
 				<div class="card">
-					<div class="card-block" data-i18n="index.schoolAccountSetting"></div>
+					<div class="card-block" data-i18n="index.schoolAccountSetting"><!-- 學校帳戶設定 --></div>
+				</div>
+			</a>
+		</div>
+		<div class="col-md-4">
+			<a class="link-item" href="./regulation.html">
+				<div class="card">
+					<div class="card-block" data-i18n="index.formSurvey"><!-- 簡章調查 --></div>
 				</div>
 			</a>
 		</div>
 		<div class="col-md-4">
 			<a class="link-item" href="#">
 				<div class="card">
-					<div class="card-block" data-i18n="index.formSurvey"></div>
+					<div class="card-block" data-i18n="index.personalInfo"><!-- 個人申請資料下載、審核與回覆 --></div>
 				</div>
 			</a>
 		</div>
 		<div class="col-md-4">
 			<a class="link-item" href="#">
 				<div class="card">
-					<div class="card-block" data-i18n="index.personalInfo"></div>
+					<div class="card-block" data-i18n="index.download"><!-- 下載當年度錄取學生資料 --></div>
 				</div>
 			</a>
 		</div>
 		<div class="col-md-4">
 			<a class="link-item" href="#">
 				<div class="card">
-					<div class="card-block" data-i18n="index.download"></div>
+					<div class="card-block" data-i18n="index.history"><!-- 查詢歷年錄取學生資料 --></div>
 				</div>
 			</a>
 		</div>
 		<div class="col-md-4">
 			<a class="link-item" href="#">
 				<div class="card">
-					<div class="card-block" data-i18n="index.history"></div>
-				</div>
-			</a>
-		</div>
-		<div class="col-md-4">
-			<a class="link-item" href="#">
-				<div class="card">
-					<div class="card-block" data-i18n="index.singUp"></div>
+					<div class="card-block" data-i18n="index.singUp"><!-- 教育展報名系統 --></div>
 				</div>
 			</a>
 		</div>
