--- a/src/regulation.ejs
+++ b/src/regulation.ejs
@@ -144,23 +144,29 @@
 					</div>
 				</div>
 				<div class="form-group row">
-					<div class="col-10 offset-md-2">
+					<div class="col-md-10 offset-md-2">
 						<div class="row">
 							<div class="col-4">
 								<input id="isSuspend" class="" type="checkbox" />
-								<label class="col-form-label" data-i18n="regulation.schoolForm.isSuspend"><!-- 是否停招 --></label>
+								<label for="isSuspend" class="col-form-label" data-i18n="regulation.schoolForm.isSuspend"><!-- 是否停招 --></label>
 							</div>
 
 							<div class="col-4">
 								<input id="fiveYearAllowed" class="" type="checkbox" />
-								<label class="col-form-label" data-i18n="regulation.schoolForm.fiveYearAllowed"><!-- [中五]我可以招呢 --></label>
+								<label for="fiveYearAllowed" class="col-form-label" data-i18n="regulation.schoolForm.fiveYearAllowed"><!-- [中五]我可以招呢 --></label>
 							</div>
 
 							<div class="col-4">
 								<input id="fiveYearPrepare" class="" type="checkbox" />
-								<label class="col-form-label" data-i18n="regulation.schoolForm.fiveYearPrepare"><!-- [中五]我準備招了喔 --></label>
+								<label for="fiveYearPrepare" class="col-form-label" data-i18n="regulation.schoolForm.fiveYearPrepare"><!-- [中五]我準備招了喔 --></label>
 							</div>
 						</div>
+					</div>
+				</div>
+				<div class="form-group row">
+					<div id="buttonRow" class="col-md-10 offset-md-2">
+						<button id="btn-reset" class="btn btn-default" data-i18n="global.resetBtn"><!-- 重設 --></button>
+						<button id="btn-save" class="btn btn-primary" data-i18n="global.saveBtn"><!-- 儲存 --></button>
 					</div>
 				</div>
 			</div>
