增加是否提供獎學金欄位，修改欄位名稱

--- a/src/regulation.ejs
+++ b/src/regulation.ejs
@@ -111,6 +111,12 @@
 					</div>
 				</div>
 				<div class="form-group row">
+					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.scholarship"><!-- 是否提供獎學金 --></label>
+					<div class="col-10">
+						<input id="Scholarship" class="form-control" type="checkbox" /><!-- 可以做成是/否嗎，像最下面的 default/primary -->
+					</div>
+				</div>
+				<div class="form-group row">
 					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.ch.scholarshipInfo"><!-- 獎學金說明(中文) --></label>
 					<div class="col-10">
 						<input id="chScholarshipInfo" class="form-control" type="text" />
