--- a/src/regulation.ejs
+++ b/src/regulation.ejs
@@ -8,156 +8,88 @@
 	<div class="row">
 		<div class="col-lg-11 offset-lg-1">
 			<div id="schoolForm">
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.code"><!-- 學校代碼 --></label>
-					<div class="col-10">
-						<input id="code" class="form-control" type="text" />
-					</div>
+				 <div class="form-group">
+					<label for="phone" data-i18n="regulation.schoolForm.phone"><!-- 學校聯絡電話 --></label>
+					<input type="text" class="form-control" id="phone">
+				</div>
+				<div class="form-group">
+					<label for="fax" data-i18n="regulation.schoolForm.fax"><!-- 學校傳真電話 --></label>
+					<input type="text" class="form-control" id="fax">
+				</div>
+				<div class="form-group">
+					<label for="url" data-i18n="regulation.schoolForm.url"><!-- 學校網站網址 --></label>
+					<input type="text" class="form-control" id="url">
+				</div>
+				<div class="form-group">
+					<label for="systems" data-i18n="regulation.schoolForm.systems"><!-- 學制資料 --></label>
+					<input type="text" class="form-control" id="systems">
+				</div>
+				<div class="form-group">
+					<label for="scholarshipUrl" data-i18n="regulation.schoolForm.scholarshipUrl"><!-- 僑生專屬獎學金說明網址 --></label>
+					<input type="text" class="form-control" id="scholarshipUrl">
+				</div>
+				<div class="form-group">
+					<label for="fiveYearRule" data-i18n="regulation.schoolForm.fiveYearRule"><!-- [中五]給海聯看的學則 --></label>
+					<input type="text" class="form-control" id="fiveYearRule">
+				</div>
+				<div class="form-group">
+					<label for="approveNo" data-i18n="regulation.schoolForm.approveNo"><!-- 自招核定文號 --></label>
+					<input type="text" class="form-control" id="approveNo">
+				</div>
+				<div class="form-group">
+					<label for="chTitle" data-i18n="regulation.schoolForm.locale.ch.title"><!-- 學校名稱(中文) --></label>
+					<input type="text" class="form-control" id="chTitle">
+				</div>
+				<div class="form-group">
+					<label for="enTitle" data-i18n="regulation.schoolForm.locale.en.title"><!-- 學校名稱(英文) --></label>
+					<input type="text" class="form-control" id="enTitle">
+				</div>
+				<div class="form-group">
+					<label for="chAddress" data-i18n="regulation.schoolForm.locale.ch.address"><!-- 學校地址(中文) --></label>
+					<input type="text" class="form-control" id="chAddress">
+				</div>
+				<div class="form-group">
+					<label for="enAddress" data-i18n="regulation.schoolForm.locale.en.address"><!-- 學校地址(英文) --></label>
+					<input type="text" class="form-control" id="enAddress">
+				</div>
+				<div class="form-group">
+					<label for="chOrgnization" data-i18n="regulation.schoolForm.locale.ch.orgnization"><!-- 學校負責僑生事務的承辦單位(中文) --></label>
+					<input type="text" class="form-control" id="chOrgnization">
+				</div>
+				<div class="form-group">
+					<label for="enOrgnization" data-i18n="regulation.schoolForm.locale.en.orgnization"><!-- 學校負責僑生事務的承辦單位(英文) --></label>
+					<input type="text" class="form-control" id="enOrgnization">
+				</div>
+				<div class="form-group">
+					<label for="chScholarshipInfo" data-i18n="regulation.schoolForm.locale.ch.scholarshipInfo"><!-- 獎學金說明(中文) --></label>
+					<input type="text" class="form-control" id="chScholarshipInfo">
+				</div>
+				<div class="form-group">
+					<label for="enScholarshipInfo" data-i18n="regulation.schoolForm.locale.en.scholarshipInfo"><!-- 獎學金說明(英文) --></label>
+					<input type="text" class="form-control" id="enScholarshipInfo">
+				</div>
+				<div class="form-group">
+					<label for="chScholarshipDept" data-i18n="regulation.schoolForm.locale.ch.scholarshipDept"><!-- 獎學金負責單位(中文) --></label>
+					<input type="text" class="form-control" id="chScholarshipDept">
+				</div>
+				<div class="form-group">
+					<label for="enScholarshipDept" data-i18n="regulation.schoolForm.locale.en.scholarshipDept"><!-- 獎學金負責單位(英文) --></label>
+					<input type="text" class="form-control" id="enScholarshipDept">
+				</div>
+				<div class="form-group">
+					<label for="chDormInfo" data-i18n="regulation.schoolForm.locale.ch.dormInfo"><!-- 宿舍說明(中文) --></label>
+					<input type="text" class="form-control" id="chDormInfo">
+				</div>
+				<div class="form-group">
+					<label for="enDormInfo" data-i18n="regulation.schoolForm.locale.en.dormInfo"><!-- 宿舍說明(英文) --></label>
+					<input type="text" class="form-control" id="enDormInfo">
 				</div>
 				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.type"><!-- 類型 --></label>
-					<div class="col-10">
-						<input id="type" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.phone"><!-- 學校聯絡電話 --></label>
-					<div class="col-10">
-						<input id="phone" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.fax"><!-- 學校傳真電話 --></label>
-					<div class="col-10">
-						<input id="fax" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.url"><!-- 學校網站網址 --></label>
-					<div class="col-10">
-						<input id="url" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.systems"><!-- 學制資料 --></label>
-					<div class="col-10">
-						<input id="systems" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.scholarshipUrl"><!-- 僑生專屬獎學金說明網址 --></label>
-					<div class="col-10">
-						<input id="scholarshipUrl" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.sortOrder"><!-- 學校顯示排序 --></label>
-					<div class="col-10">
-						<input id="sortOrder" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.fiveYearConfirmedBy"><!-- [中五]？(school code) --></label>
-					<div class="col-10">
-						<input id="fiveYearConfirmedBy" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.fiveYearRule"><!-- [中五]給海聯看的學則 --></label>
-					<div class="col-10">
-						<input id="fiveYearRule" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.approveNo"><!-- 自招核定文號 --></label>
-					<div class="col-10">
-						<input id="approveNo" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.ch.title"><!-- 學校名稱(中文) --></label>
-					<div class="col-10">
-						<input id="chTitle" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.en.title"><!-- 學校名稱(英文) --></label>
-					<div class="col-10">
-						<input id="enTitle" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.ch.address"><!-- 學校地址(中文) --></label>
-					<div class="col-10">
-						<input id="chAddress" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.en.address"><!-- 學校地址(英文) --></label>
-					<div class="col-10">
-						<input id="enAddress" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.ch.orgnization"><!-- 學校負責僑生事務的承辦單位(中文) --></label>
-					<div class="col-10">
-						<input id="chOrgnization" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.en.orgnization"><!-- 學校負責僑生事務的承辦單位(英文) --></label>
-					<div class="col-10">
-						<input id="enOrgnization" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.scholarship"><!-- 是否提供獎學金 --></label>
-					<div class="col-10">
-						<input id="Scholarship" class="form-control" type="checkbox" /><!-- 可以做成是/否嗎，像最下面的 default/primary -->
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.ch.scholarshipInfo"><!-- 獎學金說明(中文) --></label>
-					<div class="col-10">
-						<input id="chScholarshipInfo" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.en.scholarshipInfo"><!-- 獎學金說明(英文) --></label>
-					<div class="col-10">
-						<input id="enScholarshipInfo" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.ch.scholarshipDept"><!-- 獎學金負責單位(中文) --></label>
-					<div class="col-10">
-						<input id="chScholarshipDept" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.en.scholarshipDept"><!-- 獎學金負責單位(英文) --></label>
-					<div class="col-10">
-						<input id="enScholarshipDept" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.ch.dormInfo"><!-- 宿舍說明(中文) --></label>
-					<div class="col-10">
-						<input id="chDormInfo" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<label class="col-2 col-form-label" data-i18n="regulation.schoolForm.locale.en.dormInfo"><!-- 宿舍說明(英文) --></label>
-					<div class="col-10">
-						<input id="enDormInfo" class="form-control" type="text" />
-					</div>
-				</div>
-				<div class="form-group row">
-					<div class="col-md-10 offset-md-2">
+					<div class="col-md-12">
 						<div class="row">
 							<div class="col-4">
-								<input id="isSuspend" class="" type="checkbox" />
-								<label for="isSuspend" class="col-form-label" data-i18n="regulation.schoolForm.isSuspend"><!-- 是否停招 --></label>
+								<input id="isScholarship" class="" type="checkbox" />
+								<label for="isScholarship" class="col-form-label" data-i18n="regulation.schoolForm.isScholarship"><!-- 是否提供獎學金 --></label>
 							</div>
 
 							<div class="col-4">
@@ -173,7 +105,7 @@
 					</div>
 				</div>
 				<div class="form-group row">
-					<div id="buttonRow" class="col-md-10 offset-md-2">
+					<div id="buttonRow" class="col-md-12">
 						<button id="btn-reset" class="btn btn-default" data-i18n="global.resetBtn"><!-- 重設 --></button>
 						<button id="btn-save" class="btn btn-primary" data-i18n="global.saveBtn"><!-- 儲存 --></button>
 					</div>
