Add modal for adding dept

--- a/src/css/regulation.css
+++ b/src/css/regulation.css
@@ -46,6 +46,10 @@
 	padding-bottom: 50px;
 }
 
+#page-regulation #deptForm #btn-addDept {
+	cursor: pointer;
+}
+
 #page-regulation #deptForm #table-deptList {
 	margin-top: 10px;
 }
