--- a/src/regulation.ejs
+++ b/src/regulation.ejs
@@ -123,7 +123,7 @@
 	<div class="row">
 		<div class="col-lg-11 offset-lg-1">
 			<div id="deptForm" style="display: none">
-				<button id="btn-addDept" class="btn btn-primary">
+				<button id="btn-addDept" class="btn btn-primary" data-toggle="modal" data-target="#modal-addDept">
 					<i class="fa fa-plus" aria-hidden="true"></i>
 					<span data-i18n="regulation.deptForm.addDept"></span>
 				</button>
@@ -166,6 +166,36 @@
 						</tr>
 					</tbody>
 				</table>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div id="modal-addDept" class="modal fade">
+	<div class="modal-dialog modal-lg" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" data-i18n="regulation.deptForm.addDeptModal.title"><!-- 新增系所 --></h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<div class="form-group row">
+					<label for="deptName" class="col-2 col-form-label" data-i18n="regulation.deptForm.addDeptModal.deptName"><!-- 系所名稱 --></label>
+					<div class="col-10">
+						<input id="deptName" class="form-control" type="text">
+					</div>
+				</div>
+				<div class="form-group row">
+					<label for="editor" class="col-2 col-form-label" data-i18n="regulation.deptForm.addDeptModal.editor"><!-- 編輯者 --></label>
+					<div class="col-10">
+						<input id="editor" class="form-control" type="text">
+					</div>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-primary" data-i18n="global.addBtn"><!-- 新增 --></button>
 			</div>
 		</div>
 	</div>
