--- a/components/_sidebar.ejs
+++ b/components/_sidebar.ejs
@@ -1,1 +1,42 @@
-<h1>sidebar component</h1>
+<% 
+	function isActive(page) {
+		return current.source == page ? 'active' : '';
+	}
+%>
+
+<div class="row">
+	<div class="col-3">
+		LOGO
+	</div>
+	<div class="col-9">
+		海外聯招會委員學校平台<br />
+		簡章調查系統
+	</div>
+</div>
+<hr />
+<div class="row">
+	<div class="col-12">
+		<div class="list-group">
+			<a href="#" class="list-group-item list-group-item-action <%= isActive('index') %>">最新消息</a>
+			<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">學校資料</a>
+			<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">系所資料</a>
+			<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">學士班</a>
+			<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">碩士班</a>
+			<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">博士班</a>
+			<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">港二技</a>
+			<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">學士班、港二技</a>
+			<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">碩士班</a>
+			<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">博士班</a>
+			<a href="#" class="list-group-item list-group-item-action <%= isActive('') %>">帳號管理</a>
+		</div>
+	</div>
+</div>
+<hr />
+<div class="row">
+	<div class="col-12">
+		<h5>帳號資訊</h5>
+		<div>國立暨南國際大學</div>
+		<div>吳富悅</div>
+		<button class="btn btn-secondary btn-block">登出</button>
+	</div>
+</div>
